--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@contentful/live-preview": "^4.6.5",
     "@contentful/rich-text-react-renderer": "^16.0.1",
     "@heroicons/react": "^2.2.0",
+    "@react-three/drei": "^10.0.6",
     "contentful": "^11.4.4",
     "markdown-to-jsx": "^7.7.3",
     "next": "^15.1.6",
