--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/components/SinglePost.tsx", "app/blog/page.jsx", "app/layout.tsx", "app/ui/space.jsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/components/SinglePost.tsx", "app/blog/page.jsx", "app/layout.tsx", "app/ui/space.jsx", "app/about-me/page.jsx"],
   "exclude": ["node_modules"]
 }
